# MiroDiagramming

./: .babelrc  .dockerignore  .editorconfig  .env.example  .gitignore  .jshintrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .releaserc  .stylelintrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app-manifest.yml  app.db  app.html  capability-edges.json  capability-hierachy.json  config.example.yaml  cypress.config.ts  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  eslint.config.mjs  fenrick.miro.sln.DotSettings  fenrick.miro.slnx  global.json  implementation_plan.md  improvement_plan.md  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  process-flow.json  (+18 more)
.github/: CODE_OF_CONDUCT.md  dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit
.sonarlint/: fenrick.miro.json
.storybook/: main.ts  preview.ts
config/: .env.example  alembic.ini  app-manifest.yml  config.example.yaml  config.yaml
docs/: APP_MODULES.md  ARCHITECTURE.md  ASPIRE.md  BOARD_MODULES.md  CODE_STYLE.md  COMPONENTS.md  CORE_MODULES.md  DEPLOYMENT.md  EXCEL_IMPORT.md  FOUNDATION.md  LAYOUT_OPTIONS.md  MIGRATION_NODE_PLAN.md  MIRO_API_COSTS.md  MIRO_PANEL_UX_CHECKLIST.md  NODE_ARCHITECTURE.md  PATTERNS.md  README.md  SERVER_MODULES.md  STYLING.md  TABS.md  TEMPLATES.md  TWO_TIER_TODOS.md  UI_MODULES.md  WEBSDK_BOARD_ADAPTER.md  WIKI.md  frontend.md  migration-node-plan.md  migration-tracker.md  node-architecture.md  python-architecture.md  runbook.md  testing-strategy.md  ui-ux.md
(+2341 files in other folders)
