[tool.poetry]
name = "miro-backend"
version = "0.1.0"
description = "Miro backend service"
authors = ["" ]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
"uvicorn" = {extras = ["standard"], version = "^0.30.1"}
pydantic = ">=2.0"
sqlalchemy = "^2.0"
alembic = "^1.13"
logfire = "^4.3.3"
opentelemetry-instrumentation-fastapi = "^0.57b0"
opentelemetry-instrumentation-sqlalchemy = "^0.57b0"
opentelemetry-instrumentation-sqlite3 = "^0.57b0"
prometheus-fastapi-instrumentator = "^6.1.0"
pydantic-settings = "^2.10.1"
pyyaml = "^6.0.2"
cryptography = "^42.0.5"
cachetools = "^5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.4"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"
httpx = "^0.27"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.1.0"
types-pyyaml = "^6.0.12.20250809"
types-cachetools = "^5.3.0"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
